[gd_scene load_steps=11 format=3 uid="uid://c5rtxchuisd4f"]

[ext_resource type="Script" path="res://main.gd" id="1_qw1dm"]
[ext_resource type="Script" path="res://Player.gd" id="2_obniu"]
[ext_resource type="Script" path="res://Ball.gd" id="3_5qbf6"]
[ext_resource type="Script" path="res://CPU.gd" id="3_e5c36"]

[sub_resource type="CanvasTexture" id="CanvasTexture_m7pfw"]
specular_color = Color(0.529412, 0.337255, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bpx04"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kcx1q"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_af6mn"]
size = Vector2(1177, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lk4b3"]
size = Vector2(1186, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cf1ot"]
size = Vector2(47, 675.5)

[node name="Main" type="Sprite2D"]
texture = SubResource("CanvasTexture_m7pfw")
script = ExtResource("1_qw1dm")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("2_obniu")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_bpx04")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("3_e5c36")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_bpx04")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("3_5qbf6")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_kcx1q")

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Walls"]
position = Vector2(578.5, -8.5)
shape = SubResource("RectangleShape2D_af6mn")

[node name="Bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2(575, 656.5)
shape = SubResource("RectangleShape2D_lk4b3")

[node name="PointLeft" type="Area2D" parent="."]
position = Vector2(575, 656.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointLeft"]
position = Vector2(-604.5, -327.75)
shape = SubResource("RectangleShape2D_cf1ot")

[node name="PointRight" type="Area2D" parent="."]
position = Vector2(575, 656.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointRight"]
position = Vector2(605, -327.5)
shape = SubResource("RectangleShape2D_cf1ot")

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="UI"]
offset_left = 1000.0
offset_right = 1010.0
offset_bottom = 26.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="UI"]
one_shot = true
autostart = true

[connection signal="body_entered" from="PointLeft" to="." method="_on_point_left_body_entered"]
[connection signal="body_entered" from="PointRight" to="." method="_on_point_right_body_entered"]
[connection signal="timeout" from="UI/Timer" to="." method="_on_timer_timeout"]
